--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>AgreLink</title>
-</head>
-<body>
-    {% for sid, device in devices.items() %}
-        <h2>Dispositivo: {{ sid }}</h2>
-        {% for key, value in device.items() %}
-            <p>{{ key.capitalize() }} : {{ value }}</p>
-        {% endfor %}
-    {% endfor %}
-</body>
-</html>
+{% extends "layout.html" %}
+{% block devices %}
+{% for sid, device in devices.items() %}
+    <div class="container">
+        <div class="row">
+        <div class="col-lg-12 text-center">
+            <h3 class="mt-5">Dispositivo: {{sid}}</h1>
+                {% for key, value in device.items() %}
+                    <p class="lead">{{ key.capitalize() }}: {{ value }}</p>
+                {% endfor %}
+        </div>
+        </div>
+    </div>
+{% endfor %}
+{% endblock devices %}
