--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
@@ -38,6 +37,9 @@
       </div>
     </div>
   </nav>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="socket.js"></script>
 
   <!-- Page Content -->
   <%- body %>
