--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,13 @@
     <div class="container">
         <div class="row">
         <div class="col-lg-12 text-center">
-            <h3 class="mt-5">Dispositivo: <%- id %></h1>
-                <p><%- devices[id].name %></p>
-                <p><%- devices[id].engine %></p>
+            <h3 class="mt-5">Dispositivo: <%- id %></h3>
+            <p><%- devices[id].account %></p>
+            <p><%- devices[id].engine %></p>
+            <form id="exercise_form" action="" method="post">
+                <input type="text" name="exercise" title="Jeje"/>
+                <button type="submit">Cargar ejercicio</button>
+            </form>
         </div>
         </div>
     </div>
