--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,12 @@
         <div class="row">
         <div class="col-lg-12 text-center">
             <h3 class="mt-5">Dispositivo: <%- id %></h3>
-            <p><%- devices[id].account %></p>
-            <p><%- devices[id].engine %></p>
+            <h5>Motor gráfico: <%- devices[id].engine %></h5>
+            <h5>Fabricante: <%- devices[id].manufacturer %></h5>
+            <h5>Dispositivo: <%- devices[id].product %></h5>
+            <h5>Cuenta asociada: <%- devices[id].account %></h5>
             <form id="exercise_form" action="" method="post">
-                <input type="text" name="exercise" title="Jeje"/>
+                <input type="text" name="exercise"/>
                 <button type="submit">Cargar ejercicio</button>
             </form>
         </div>
