--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,7 @@
-extends layouts/layout.pug
+extends layout.pug
 
 block content
     each id, data in devices
-        script.
-            console.log(!{Hola})
         <div class="container">
             <div class="row">
             <div class="col-lg-12 text-center">
