--- a/views/index.pug
+++ b/views/index.pug
@@ -5,10 +5,10 @@ block content
         <div class="container">
             <div class="row">
             <div class="col-lg-12 text-center">
-                <h3 class="mt-5">Dispositivo: #{id}</h3>
+                <h3 class="mt-5">Conexión: #{id}</h3>
                 <h5>Motor gráfico: #{data.engine}</h5>
                 <h5>Fabricante: #{data.manufacturer}</h5>
-                <h5>Dispositivo: #{data.product}</h5>
+                <h5>Dispositivo: #{data.device}</h5>
                 <h5>Cuenta asociada: #{data.account}</h5>
                 <form id="exercise_form" action="" method="post">
                     <input type="text" name="exercise"/>
