--- a/views/index.pug
+++ b/views/index.pug
@@ -1,15 +1,15 @@
 extends layout.pug
 
 block content
-    each id, data in devices
+    each device in devices
         <div class="container">
             <div class="row">
             <div class="col-lg-12 text-center">
-                <h3 class="mt-5">Conexión: #{id}</h3>
-                <h5>Motor gráfico: #{data.engine}</h5>
-                <h5>Fabricante: #{data.manufacturer}</h5>
-                <h5>Dispositivo: #{data.device}</h5>
-                <h5>Cuenta asociada: #{data.account}</h5>
+                <h3 class="mt-5">Conexión: #{device.id}</h3>
+                <h5>Motor gráfico: #{device.engine}</h5>
+                <h5>Fabricante: #{device.manufacturer}</h5>
+                <h5>Dispositivo: #{device.device}</h5>
+                <h5>Cuenta asociada: #{device.account}</h5>
                 <form id="exercise_form" action="" method="post">
                     <input type="text" name="exercise"/>
                     <button type="submit">Cargar ejercicio</button>
