--- a/views/index.pug
+++ b/views/index.pug
@@ -1,19 +1,50 @@
 extends layout.pug
 
 block content
-    each device in devices
-        <div class="container">
-            <div class="row">
-            <div class="col-lg-12 text-center">
-                <h3 class="mt-5">Conexión: #{device.id}</h3>
-                <h5>Motor gráfico: #{device.engine}</h5>
-                <h5>Fabricante: #{device.manufacturer}</h5>
-                <h5>Dispositivo: #{device.device}</h5>
-                <h5>Cuenta asociada: #{device.account}</h5>
-                <form id="exercise_form" action="" method="post">
-                    <input type="text" name="exercise"/>
-                    <button type="submit">Cargar ejercicio</button>
-                </form>
-            </div>
-            </div>
+  <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <h1 class="header center blue-text">AgreLink</h1>
+      <div class="row center">
+        <h5 class="header col s12 light">Automatización de ejercicios para personas con daño cerebral adquirido</h5>
+      </div>
+      <div class="row center">
+        <a href="/devices" id="download-button" class="btn-large waves-effect waves-light red">Dispositivos</a>
+        <a href="/exercises" id="download-button" class="btn-large waves-effect waves-light blue">Ejercicios</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h5 class="center">Automatizado</h5>
+
+            <p class="light">Todo el proceso de recolección y procesado de datos se hace automaticamente.</p>
+          </div>
         </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            <h5 class="center">Intuitivo</h5>
+
+            <p class="light">Manejo extremadamente sencillo del flujo de ejercicios en cada sesión, con una interfaz intuitiva, fácil de usar y compatible con dispositivos móviles.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h5 class="center">Personalizable</h5>
+
+            <p class="light">Personaliza la dificultad de cada ejercicio con los parámetros que se ajusten mejor a cada paciente.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
