--- a/views/exercises.pug
+++ b/views/exercises.pug
@@ -1,3 +1,27 @@
 extends layout.pug
 
 block content
+    <div class="container">
+        <h2 class="header center orange-text">Ejercicios</h2>
+        <div class="row">
+        each exercise in exercises
+            <div class="col s3 m4">
+                <div class="card hoverable">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src=#{exercise.img}>
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title">#{exercise.name}<a href="#"><i class="material-icons right">edit</i></a></span>
+                        <p>#{exercise.description}</p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Parámetros<i class="material-icons right">close</i></span>
+                        <ul class="collection">
+                        each value, param in exercise.params_description
+                            <li class="collection-item"><b>#{param}</b> : #{value}</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
