--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,15 +12,10 @@
 </head>
 
 <body>
+
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container">
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/">Inicio</a></li>
-      </ul>
-
-      <ul id="nav-mobile" class="sidenav">
-        <li><a href="/">Inicio</a></li>
-      </ul>
+      <a href="/" class="brand-logo center"><i class="material-icons">cloud</i>Inicio</a>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
