--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,12 +3,16 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
   <title>AgreLink</title>
 
-  <!-- CSS  -->
+  <!-- Icons & CSS  -->
+  <script src="https://kit.fontawesome.com/ad33b9883a.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
 </head>
 
 <body>
@@ -23,9 +27,9 @@
   block content
 
   <!--  Scripts-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+  <script src="materialize_init.js"></script>
+  
 </body>
 
 </html>
