Added engines cards

--- a/views/exercises.pug
+++ b/views/exercises.pug
@@ -11,7 +11,7 @@ block content
                         <img class="activator" src=#{exercise.img}>
                     </div>
                     <div class="card-content">
-                        <span class="card-title">#{exercise.name}<a href="#"><i class="material-icons right">edit</i></a></span>
+                        <span class="card-title">#{exercise.name}</span>
                         <p>#{exercise.description}</p>
                     </div>
                     <div class="card-reveal">
