--- a/views/index.pug
+++ b/views/index.pug
@@ -5,23 +5,23 @@ block content
     <div class="container">
       <h1 class="header center blue-text">AgreLink</h1>
       <div class="row center">
-        <h5 class="header col s12 light">Automatización de ejercicios para personas con daño cerebral adquirido</h5>
+        <h5 class="header col s12 light">Automatización de ejercicios con realidad virtual para personas con daño cerebral adquirido</h5>
       </div>
       <div class="row center">
-        <a href="/devices" id="download-button" class="btn-large waves-effect waves-light red">Dispositivos</a>
-        <a href="/exercises" id="download-button" class="btn-large waves-effect waves-light blue">Ejercicios</a>
+        <a href="/devices" class="btn-large waves-effect waves-light teal">Dispositivos</a>
+        <a href="/exercises" class="btn-large waves-effect waves-light blue">Ejercicios</a>
       </div>
     </div>
   </div>
 
   <div class="container">
     <div class="section">
-
+    <h3 class="header center orange-text">Características</h3>
       <!--   Icon Section   -->
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center"><i class="medium material-icons yellow-text">flash_on</i></h2>
             <h5 class="center">Automatizado</h5>
 
             <p class="light">Todo el proceso de recolección y procesado de datos se hace automaticamente.</p>
@@ -30,7 +30,7 @@ block content
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+            <h2 class="center"><i class="medium material-icons brown-text">group</i></h2>
             <h5 class="center">Intuitivo</h5>
 
             <p class="light">Manejo extremadamente sencillo del flujo de ejercicios en cada sesión, con una interfaz intuitiva, fácil de usar y compatible con dispositivos móviles.</p>
@@ -39,7 +39,7 @@ block content
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+            <h2 class="center light-teal-text"><i class="medium material-icons teal-text">settings</i></h2>
             <h5 class="center">Personalizable</h5>
 
             <p class="light">Personaliza la dificultad de cada ejercicio con los parámetros que se ajusten mejor a cada paciente.</p>
@@ -47,4 +47,37 @@ block content
         </div>
       </div>
     </div>
+
+    <div class="section">
+      <div class="row">
+      <h3 class="header center orange-text">Motores</h3>
+        <div class="col s12 m6 l4 xl3 push-xl3">
+          <div class="card sticky-action">
+            <div class="card-image">
+              <img src="unreal.png">
+            </div>
+            <div class="card-content">
+              <span class="card-title">Unreal Engine<i class="material-icons light-green-text right">android</i><i class="material-icons right">desktop_windows</i></span>
+            </div>
+            <div class="card-action">
+              <a href="#">Descargar Cliente</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6 l4 xl3 push-xl3">
+          <div class="card sticky-action">
+            <div class="card-image">
+              <img src="unity.png">
+            </div>
+            <div class="card-content">
+              <span class="card-title">Unity<i class="material-icons light-green-text right">android</i><i class="material-icons right">desktop_windows</i></span>
+            </div>
+            <div class="card-action">
+              <a href="#">Descargar Cliente</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
