--- a/views/login.pug
+++ b/views/login.pug
@@ -3,24 +3,26 @@ extends layout.pug
 block content
     <div id="login-page" class="row container">
         <h2 class="header center orange-text">Ingresar</h2>
-        <div class="col s6 offset-s3 card-panel">
-            <form class="login-form">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">mail_outline</i>
-                    <input class="validate" id="email" type="email">
-                    <label for="email" data-error="wrong" data-success="right">Email</label>
-                </div>
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">lock_outline</i>
-                    <input id="password" type="password">
-                    <label for="password">Contraseña</label>
-                </div>
-                <div class="input-field col s12">
-                    <a href="#" class="btn waves-effect blue waves-light col s12">Ingresar</a>
-                </div>
-                <div class="input-field col s12">
-                    <p class="margin center-align medium-small"><a href="#">¿Olvidaste tu contraseña?</a></p>
-                </div>
-            </form>
+        <div class="valign-wrapper">
+            <div class="col s12 l6 xl6 pull-l3 pull-xl3 card-panel">
+                <form class="login-form">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">mail_outline</i>
+                        <input class="validate" id="email" type="email">
+                        <label for="email" data-error="wrong" data-success="right">Email</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">lock_outline</i>
+                        <input id="password" type="password">
+                        <label for="password">Contraseña</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <a href="#" class="btn waves-effect blue waves-light col s12">Ingresar</a>
+                    </div>
+                    <div class="input-field col s12">
+                        <p class="margin center-align medium-small"><a href="#">¿Olvidaste tu contraseña?</a></p>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
