--- a/views/register.pug
+++ b/views/register.pug
@@ -3,26 +3,28 @@ extends layout.pug
 block content
     <div id="register-page" class="row container">
         <h2 class="header center orange-text">Registro</h2>
-        <div class="col s6 offset-s3 card-panel">
-            <form class="login-form">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">account_circle</i>
-                    <input id="username" type="text">
-                    <label for="username">Usuario</label>
-                </div>
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">mail_outline</i>
-                    <input class="validate" id="email" type="email">
-                    <label for="email" data-error="wrong" data-success="right">Email</label>
-                </div>
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">lock_outline</i>
-                    <input id="password" type="password">
-                    <label for="password">Contraseña</label>
-                </div>
-                <div class="input-field col s12">
-                    <a href="#" class="btn waves-effect blue waves-light col s12">Registrarse</a>
-                </div>
-            </form>
+        <div class="valign-center">
+            <div class="col s12 l6 xl6 push-l3 push-xl3 card-panel">
+                <form class="login-form">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">account_circle</i>
+                        <input id="username" type="text">
+                        <label for="username">Usuario</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">mail_outline</i>
+                        <input class="validate" id="email" type="email">
+                        <label for="email" data-error="wrong" data-success="right">Email</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">lock_outline</i>
+                        <input id="password" type="password">
+                        <label for="password">Contraseña</label>
+                    </div>
+                    <div class="input-field col s12">
+                        <a href="#" class="btn waves-effect blue waves-light col s12">Registrarse</a>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
