Added exercise model inheritance, footer and imgs

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,8 @@
 extends layout.pug
 
 block content
+
+  <!--  Main Header Section   -->
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <h1 class="header center blue-text">AgreLink</h1>
@@ -14,10 +16,9 @@ block content
     </div>
   </div>
 
-  <div class="container">
-    <div class="section">
-    <h3 class="header center orange-text">Características</h3>
-      <!--   Icon Section   -->
+  <!--  Features Section   -->
+  <div class="section">
+    <div class="container">
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
@@ -47,10 +48,11 @@ block content
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="section">
+  <div class="section">
+    <div class="container">
       <div class="row">
-      <h3 class="header center orange-text">Motores</h3>
         <div class="col s12 m6 l4 xl3 push-xl3">
           <div class="card sticky-action">
             <div class="card-image">
@@ -79,5 +81,25 @@ block content
         </div>
       </div>
     </div>
-
   </div>
+
+  <div class="section">
+    <div class="container">
+      <div class="row">
+      
+      </div>
+    </div>
+  </div>
+
+  <footer class="page-footer blue">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">AgreLink</h5>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright blue">
+      <div class="container">© 2020 Copyright</div>
+    </div>
+  </footer>
