--- a/views/layout.pug
+++ b/views/layout.pug
@@ -27,8 +27,13 @@
         <li><a href="/register"><i class="material-icons left">person_add</i>Registro</a></li>
       </ul>
       <ul id="nav-mobile" class="sidenav">
+        <li><a class="subheader">Acceso</a></li>
         <li><a href="/login"><i class="material-icons left">account_circle</i>Ingresar</a></li>
         <li><a href="/register"><i class="material-icons left">person_add</i>Registro</a></li>
+        <li><div class="divider"></div></li>
+        <li><a class="subheader">Descargas</a></li>
+        <li><a href="#">Unreal Engine</a></li>
+        <li><a href="#">Unity</a></li>
       </ul>
   </nav>
 
