Improved exercises responsiveness

--- a/views/exercises.pug
+++ b/views/exercises.pug
@@ -5,8 +5,8 @@ block content
         <h2 class="header center orange-text">Ejercicios</h2>
         <div class="row">
         each exercise in exercises
-            <div class="col s12 m4">
-                <div class="card hoverable">
+            <div class="col s12 m6 l6 xl4">
+                <div class="card hoverable large">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src=#{exercise.img}>
                     </div>
