Public folder reorganized and db populator script improved. Closes #12

--- a/views/devices.pug
+++ b/views/devices.pug
@@ -8,7 +8,7 @@ block content
             <div class="col s12 m4">
                 <div class="card hoverable">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img src="quest.jpg">
+                        <img src="images/devices/quest.jpg">
                     </div>
                     <div class="card-content">
                         <span class="card-title center">#{device.account}<a href="#"></a></span>
