--- a/views/index.pug
+++ b/views/index.pug
@@ -30,7 +30,7 @@ block content
       </div>
       <div class="row center">
         <div class="col s12">
-          <img class="responsive-img" src="auto.png">
+          <img class="responsive-img" src="images/auto.png">
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@ block content
         <div class="col s12 m6 l4 xl3 push-xl3">
           <div class="card sticky-action hoverable">
             <div class="card-image">
-              <img src="unreal.png">
+              <img src="images/engines/unreal.png">
             </div>
             <div class="card-content">
               <span class="card-title">Unreal Engine<i class="material-icons light-green-text right">android</i><i class="material-icons right">desktop_windows</i></span>
@@ -65,7 +65,7 @@ block content
         <div class="col s12 m6 l4 xl3 push-xl3">
           <div class="card sticky-action hoverable">
             <div class="card-image">
-              <img src="unity.png">
+              <img src="images/engines/unity.png">
             </div>
             <div class="card-content">
               <span class="card-title">Unity<i class="material-icons light-green-text right">android</i><i class="material-icons right">desktop_windows</i></span>
@@ -189,7 +189,7 @@ block content
           <div class="col s12 x6 l6 xl6">
             <div class="card hoverable">
               <div class="card-image waves-effect waves-block waves-light">
-                  <img src="sandwich.jpg">
+                  <img src="images/exercises/sandwich.jpg">
               </div>
               <div class="card-content">
                   <span class="card-title">Sandwich</span>
