--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -5,19 +5,19 @@ block content
         <h2 class="header center orange-text">Ingresar</h2>
         <div class="valign-wrapper">
             <div class="col s12 l6 xl6 pull-l3 pull-xl3 card-panel">
-                <form class="login-form">
+                <form class="login-form" action="login" method="post">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">mail_outline</i>
-                        <input class="validate" id="email" type="email">
+                        <input class="validate" name="email" type="email">
                         <label for="email" data-error="wrong" data-success="right">Email</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">lock_outline</i>
-                        <input id="password" type="password">
+                        <input name="password" type="password">
                         <label for="password">Contraseña</label>
                     </div>
                     <div class="input-field col s12">
-                        <a href="#" class="btn waves-effect blue waves-light col s12">Ingresar</a>
+                        <input type="submit" value="Ingresar" class="btn">
                     </div>
                     <div class="input-field col s12">
                         <p class="margin center-align medium-small"><a href="#">¿Olvidaste tu contraseña?</a></p>
