--- a/src/views/dashboard.pug
+++ b/src/views/dashboard.pug
@@ -2,5 +2,5 @@ extends layout.pug
 
 block content
     <div id="register-page" class="row container">
-        if logged
         <h2 class="header center orange-text">Bienvenido #{user.name}</h2>
+    </div>
