Changed headsets images to png and fixed input label bug. Closes #16

--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -8,20 +8,20 @@ block content
                 <form class="login-form" action="register" method="post">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">account_circle</i>
-                        <input name="username" type="text">
+                        <input name="username" id="username" type="text">
                         <label for="username">Usuario</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">mail_outline</i>
-                        <input class="validate" name="email" type="email">
+                        <input class="validate" id="email" name="email" type="email">
                         <label for="email" data-error="wrong" data-success="right">Email</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">lock_outline</i>
-                        <input name="password" type="password">
+                        <input name="password" id="password" type="password">
                         <label for="password">Contraseña</label>
                     </div>
-                    <div class="input-field col s12">
+                    <div class="input-field center col s12">
                         <input type="submit" value="Registrarse" class="btn">
                     </div>
                 </form>
