--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,15 +8,15 @@ block content
                 <form class="login-form" action="login" method="post">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">mail_outline</i>
-                        <input class="validate" name="email" type="email">
+                        <input class="validate" id="email" name="email" type="email">
                         <label for="email" data-error="wrong" data-success="right">Email</label>
                     </div>
                     <div class="input-field col s12">
                         <i class="material-icons prefix">lock_outline</i>
-                        <input name="password" type="password">
+                        <input name="password" id="password" type="password">
                         <label for="password">Contraseña</label>
                     </div>
-                    <div class="input-field col s12">
+                    <div class="input-field center col s12">
                         <input type="submit" value="Ingresar" class="btn">
                     </div>
                     <div class="input-field col s12">
