Created dashboard views and routes (closes #19)  and reworked views structure (closes #20 closes #22). Also created script to populate DB with fake patients (closes #21). Fixed slider color (closes #6)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,21 @@
 .tabs .indicator {
     background-color:#26a69a;
 }
+
+.tabs .tab a:focus.active {
+    background-color: rgb(38, 166, 154);
+}
+
+header, main, footer {
+    padding-left: 300px;
+}
+
+@media only screen and (max-width : 992px) {
+    header, main, footer {
+        padding-left: 0;
+    }
+}
+
+#dashboard-content {
+    padding: 10px;
+}
