--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,8 +10,8 @@ block content
         <h5 class="header col s12 light">Automatización de ejercicios con realidad virtual para personas con daño cerebral adquirido</h5>
       </div>
       <div class="row center">
-        <a href="/devices" class="btn-large waves-effect waves-light teal">Dispositivos</a>
-        <a href="/exercises" class="btn-large waves-effect waves-light blue">Ejercicios</a>
+        <a href="/login" class="btn-large waves-effect waves-light blue">Entrar</a>
+        <a href="/register" class="btn-large waves-effect waves-light teal">Registrarse</a>
       </div>
     </div>
   </div>
@@ -95,8 +95,8 @@ block content
         <div class="col s12">
           <ul class="tabs blue z-depth-1">
             <li class="tab col s4"><a class="active white-text" href="#facil">Fácil</a></li>
-            <li class="tab col s4"><a class="active white-text" href="#medio">Medio</a></li>
-            <li class="tab col s4"><a class="active white-text" href="#dificil">Dificil</a></li>
+            <li class="tab col s4"><a class="white-text" href="#medio">Medio</a></li>
+            <li class="tab col s4"><a class="white-text" href="#dificil">Dificil</a></li>
           </ul>
         </div>
       </div>
