--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -9,6 +9,7 @@
   <script src="https://kit.fontawesome.com/ad33b9883a.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
 
   <!--Let browser know website is optimized for mobile-->
@@ -19,30 +20,11 @@
 
 <body>
 
-  <nav class="light-blue lighten-1">
-    <div class="nav-wrapper container">
-      <a href="/" class="brand-logo center"><i class="material-icons">cloud</i>Inicio</a>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/login"><i class="material-icons left">account_circle</i>Ingresar</a></li>
-        <li><a href="/register"><i class="material-icons left">person_add</i>Registro</a></li>
-      </ul>
-      <ul id="nav-mobile" class="sidenav">
-        <li><a class="subheader">Acceso</a></li>
-        <li><a href="/login"><i class="material-icons left">account_circle</i>Ingresar</a></li>
-        <li><a href="/register"><i class="material-icons left">person_add</i>Registro</a></li>
-        <li><div class="divider"></div></li>
-        <li><a class="subheader">Descargas</a></li>
-        <li><a href="#">Unreal Engine</a></li>
-        <li><a href="#">Unity</a></li>
-      </ul>
-  </nav>
-
   block content
 
   <!--  Scripts-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="js/materialize_init.js"></script>
+  <script src="/js/materialize_init.js"></script>
   
 </body>
 
