--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -1,6 +1,9 @@
 extends layout.pug
 
 block content
+
+    include partials/header
+
     <div id="register-page" class="row container">
         <h2 class="header center orange-text">Registro</h2>
         <div class="valign-center">
