--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -1,6 +1,9 @@
 extends layout.pug
 
 block content
+
+    include partials/header
+
     <div id="login-page" class="row container">
         <h2 class="header center orange-text">Ingresar</h2>
         <div class="valign-wrapper">
