Added exercise parameter schema #26, tested devices POST updating #25, exercises catalog to main page (closes #24) and added login buttons with google and facebook #23

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -22,10 +22,16 @@ block content
                     <div class="input-field center col s12">
                         <input type="submit" value="Ingresar" class="btn">
                     </div>
-                    <div class="input-field col s12">
-                        <p class="margin center-align medium-small"><a href="#">¿Olvidaste tu contraseña?</a></p>
-                    </div>
                 </form>
+                <div class="row center">
+                    <a class="orange accent-4 waves-effect waves-light btn"><i class="fab fa-google left"></i>Ingresar con Google</a>
+                </div>
+                <div class="row center">
+                    <a class="light-blue darken-4 waves-effect waves-light btn"><i class="fab fa-facebook left"></i>Ingresar con Facebook</a>
+                </div>
+                <div class="row center">
+                    <p class="margin medium-small"><a href="#">¿Olvidaste tu contraseña?</a></p>
+                </div>
             </div>
         </div>
     </div>
