--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -10,7 +10,7 @@ block content
         <h5 class="header col s12 light">Automatización de ejercicios con realidad virtual para personas con daño cerebral adquirido</h5>
       </div>
       <div class="row center">
-        <a href="/login" class="btn-large waves-effect waves-light blue">Entrar</a>
+        <a href="/login" class="btn-large waves-effect waves-light blue">Ingresar</a>
         <a href="/register" class="btn-large waves-effect waves-light teal">Registrarse</a>
       </div>
     </div>
@@ -30,7 +30,151 @@ block content
       </div>
       <div class="row center">
         <div class="col s12">
-          <img class="responsive-img" src="images/auto.png">
+          <img class="responsive-img" src="images/cycle_diagram.png">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Exercises Section -->
+  <div class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <div class="icon-block">
+            <h2 class="center light-teal-text"><i class="large material-icons teal-text">edit</i></h2>
+            <h4 class="center">Diverso</h4>
+            <h6 class="light center">Amplio catálogo de ejercicios para adaptarse a la patología concreta de cada paciente.</h6>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+      each exercise in exercises
+        include partials/exercise
+        +exercise(exercise)
+      </div>
+    </div>
+  </div>
+
+  <!-- Exercise Personalization Section -->
+  <div class="section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <div class="icon-block">
+            <h2 class="center light-teal-text"><i class="large material-icons teal-text">settings</i></h2>
+            <h4 class="center">Personalizable</h4>
+            <h6 class="light center">Personaliza la dificultad de cada ejercicio con los parámetros que se ajusten mejor a cada paciente.</h6>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12">
+          <ul class="tabs blue z-depth-1">
+            <li class="tab col s4"><a class="active white-text" href="#facil">Fácil</a></li>
+            <li class="tab col s4"><a class="white-text" href="#medio">Medio</a></li>
+            <li class="tab col s4"><a class="white-text" href="#dificil">Dificil</a></li>
+          </ul>
+        </div>
+      </div>
+        <div class="row">
+        <div class="container">
+          <div id="facil" class="col s12 m12 l6 xl6">
+            <table>
+              <thead>
+                <tr>
+                  <th>Parámetro</th>
+                  <th>Descripción</th>
+                  <th>Valor</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Ingredientes</td>
+                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
+                  <td>6</td>
+                </tr>
+                <tr>
+                  <td>Pisos</td>
+                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
+                  <td>3</td>
+                </tr>
+                <tr>
+                  <td>Duracion</td>
+                  <td>Tiempo en segundos de duración del ejercicio</td>
+                  <td>60</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div id="medio" class="col s12 m12 l6 xl6" style="display: none;">
+            <table>
+              <thead>
+                <tr>
+                  <th>Parámetro</th>
+                  <th>Descripción</th>
+                  <th>Valor</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Ingredientes</td>
+                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
+                  <td>9</td>
+                </tr>
+                <tr>
+                  <td>Pisos</td>
+                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
+                  <td>5</td>
+                </tr>
+                <tr>
+                  <td>Duracion</td>
+                  <td>Tiempo en segundos de duración del ejercicio</td>
+                  <td>120</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div id="dificil" class="col s12 m12 l6 xl6" style="display: none;">
+            <table>
+              <thead>
+                <tr>
+                  <th>Parámetro</th>
+                  <th>Descripción</th>
+                  <th>Valor</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Ingredientes</td>
+                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
+                  <td>12</td>
+                </tr>
+                <tr>
+                  <td>Pisos</td>
+                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
+                  <td>7</td>
+                </tr>
+                <tr>
+                  <td>Duracion</td>
+                  <td>Tiempo en segundos de duración del ejercicio</td>
+                  <td>180</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col s12 x6 l6 xl6">
+            <div class="card hoverable">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img src="images/exercises/sandwich.jpg">
+              </div>
+              <div class="card-content">
+                <span class="card-title">Sandwich</span>
+                <p>Creación de diferentes sandwiches con número de ingredientes y pisos variable.</p>
+              </div>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
     </div>
@@ -74,130 +218,6 @@ block content
               <a href="#">Descargar Cliente</a>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Exercise Personalization Section -->
-  <div class="section">
-    <div class="container">
-      <div class="row">
-        <div class="col s12">
-          <div class="icon-block">
-            <h2 class="center light-teal-text"><i class="large material-icons teal-text">settings</i></h2>
-            <h4 class="center">Personalizable</h4>
-            <h6 class="light center">Personaliza la dificultad de cada ejercicio con los parámetros que se ajusten mejor a cada paciente.</h6>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12">
-          <ul class="tabs blue z-depth-1">
-            <li class="tab col s4"><a class="active white-text" href="#facil">Fácil</a></li>
-            <li class="tab col s4"><a class="white-text" href="#medio">Medio</a></li>
-            <li class="tab col s4"><a class="white-text" href="#dificil">Dificil</a></li>
-          </ul>
-        </div>
-      </div>
-        <div class="row">
-        <div class="container">
-          <div id="facil" class="col s12 m12 l6 xl6">
-            <table>
-              <thead>
-                <tr>
-                    <th>Parámetro</th>
-                    <th>Descripción</th>
-                    <th>Valor</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Ingredientes</td>
-                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
-                  <td>6</td>
-                </tr>
-                <tr>
-                  <td>Pisos</td>
-                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
-                  <td>3</td>
-                </tr>
-                <tr>
-                  <td>Duracion</td>
-                  <td>Tiempo en segundos de duración del ejercicio</td>
-                  <td>60</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div id="medio" class="col s12 m12 l6 xl6" style="display: none;">
-            <table>
-              <thead>
-                <tr>
-                    <th>Parámetro</th>
-                    <th>Descripción</th>
-                    <th>Valor</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Ingredientes</td>
-                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
-                  <td>9</td>
-                </tr>
-                <tr>
-                  <td>Pisos</td>
-                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
-                  <td>5</td>
-                </tr>
-                <tr>
-                  <td>Duracion</td>
-                  <td>Tiempo en segundos de duración del ejercicio</td>
-                  <td>120</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div id="dificil" class="col s12 m12 l6 xl6" style="display: none;">
-            <table>
-              <thead>
-                <tr>
-                    <th>Parámetro</th>
-                    <th>Descripción</th>
-                    <th>Valor</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Ingredientes</td>
-                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
-                  <td>12</td>
-                </tr>
-                <tr>
-                  <td>Pisos</td>
-                  <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce et.</td>
-                  <td>7</td>
-                </tr>
-                <tr>
-                  <td>Duracion</td>
-                  <td>Tiempo en segundos de duración del ejercicio</td>
-                  <td>180</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="col s12 x6 l6 xl6">
-            <div class="card hoverable">
-              <div class="card-image waves-effect waves-block waves-light">
-                  <img src="images/exercises/sandwich.jpg">
-              </div>
-              <div class="card-content">
-                  <span class="card-title">Sandwich</span>
-                  <p>Creación de diferentes sandwiches con número de ingredientes y pisos variable.</p>
-              </div>
-            </div>
-          </div>
-        </div>
         </div>
       </div>
     </div>
