--- a/src/views/partials/device.pug
+++ b/src/views/partials/device.pug
@@ -7,7 +7,7 @@ mixin device(device, patients, exercises)
             <div class="card-content">
                 <span class="card-title center">#{device.account}<a href="#"></a></span>
                 <form id="device_form" method="POST">
-                    <input type="hidden" id="device_id" name="account" value=#{device.account}>
+                    <input type="hidden" id="device_id" name="device_id" value=#{device._id}>
                     <div class=row>
                         <div class="input-field col s12">
                             <i class="material-icons prefix">person</i>
